# RewardsTheater

./: .clang-format  .gitignore  .pre-commit-config.yaml  BUILDING.md  CMakeLists.txt  CMakePresets.json  PKGBUILD  README.md  README_uk.md  buildspec.json  vcpkg.json
.github/scripts/: .Aptfile  .Brewfile  .build.zsh  Build-Windows.ps1  Package-Windows.ps1  build-macos  build-ubuntu  check-format.sh
.github/scripts/utils.pwsh/: Install-BuildDependencies.ps1  Windows-Deps.ps1
.github/scripts/utils.zsh/: check_macos  check_packages  linux-deps.sh  macos-boost.zsh  macos-deps.zsh  macos-openssl.zsh  setup_obs  setup_ubuntu
.github/workflows/: build-project.yaml  check-format.yaml  main.yml
cmake/linux/: compilerconfig.cmake  defaults.cmake
data/locale/: en-US.ini  uk-UA.ini
images/: icons.qrc
src/: AuthenticateWithTwitchDialog.cpp  AuthenticateWithTwitchDialog.h  AuthenticateWithTwitchDialog.ui  BoostAsio.h  ConditionVariable.h  ConfirmDeleteReward.cpp  ConfirmDeleteReward.h  ConfirmDeleteRewardMessageBox.cpp  ConfirmDeleteRewardMessageBox.h  EditRewardDialog.cpp  EditRewardDialog.h  EditRewardDialog.ui  ErrorMessageBox.cpp  ErrorMessageBox.h  EventsubListener.cpp  EventsubListener.h  GithubUpdateApi.cpp  GithubUpdateApi.h  HttpClient.cpp  HttpClient.h  HttpUtil.cpp  HttpUtil.h  IoService.cpp  IoService.h  IoThreadPool.cpp  IoThreadPool.h  LibVlc.cpp  LibVlc.h  Log.h  OnTopDialog.cpp  OnTopDialog.h  PubsubListener.cpp  PubsubListener.h  QCheckBoxCompat.h  QObjectCallback.h  Reward.cpp  Reward.h  RewardRedemptionQueue.cpp  RewardRedemptionQueue.h  RewardRedemptionQueueDialog.cpp  (+31 more)
